; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/exynos/extr_exynos_drm_dma.c_drm_iommu_detach_device.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/exynos/extr_exynos_drm_dma.c_drm_iommu_detach_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { %struct.exynos_drm_private* }
%struct.exynos_drm_private = type { i32 }
%struct.device = type { i32 }

@CONFIG_ARM_DMA_USE_IOMMU = common dso_local global i32 0, align 4
@CONFIG_IOMMU_DMA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_device*, %struct.device*)* @drm_iommu_detach_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @drm_iommu_detach_device(%struct.drm_device* %0, %struct.device* %1) #0 {
  %3 = alloca %struct.drm_device*, align 8
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.exynos_drm_private*, align 8
  store %struct.drm_device* %0, %struct.drm_device** %3, align 8
  store %struct.device* %1, %struct.device** %4, align 8
  %6 = load %struct.drm_device*, %struct.drm_device** %3, align 8
  %7 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %6, i32 0, i32 0
  %8 = load %struct.exynos_drm_private*, %struct.exynos_drm_private** %7, align 8
  store %struct.exynos_drm_private* %8, %struct.exynos_drm_private** %5, align 8
  %9 = load i32, i32* @CONFIG_ARM_DMA_USE_IOMMU, align 4
  %10 = call i64 @IS_ENABLED(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load %struct.device*, %struct.device** %4, align 8
  %14 = call i32 @arm_iommu_detach_device(%struct.device* %13)
  br label %26

15:                                               ; preds = %2
  %16 = load i32, i32* @CONFIG_IOMMU_DMA, align 4
  %17 = call i64 @IS_ENABLED(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %25

19:                                               ; preds = %15
  %20 = load %struct.exynos_drm_private*, %struct.exynos_drm_private** %5, align 8
  %21 = getelementptr inbounds %struct.exynos_drm_private, %struct.exynos_drm_private* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.device*, %struct.device** %4, align 8
  %24 = call i32 @iommu_detach_device(i32 %22, %struct.device* %23)
  br label %25

25:                                               ; preds = %19, %15
  br label %26

26:                                               ; preds = %25, %12
  %27 = load %struct.device*, %struct.device** %4, align 8
  %28 = call i32 @clear_dma_max_seg_size(%struct.device* %27)
  ret void
}

declare dso_local i64 @IS_ENABLED(i32) #1

declare dso_local i32 @arm_iommu_detach_device(%struct.device*) #1

declare dso_local i32 @iommu_detach_device(i32, %struct.device*) #1

declare dso_local i32 @clear_dma_max_seg_size(%struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
